feat:java-up 矢量运算